--- a/docs/任务2/笔记.md
+++ b/docs/任务2/笔记.md
@@ -1,4 +1,4 @@
-第一章
+# 第一章 NLP 基础概念的总结
 
 - NLP是一种让计算机理解、解释和生成人类语言的技术，涉及了人类语言的理解、分析、生成和交互。
 - NLP发展历程经过早期探索（Turing test, Noam Chomsky Grammar），到符号主义和统计方法，再到机器学习时代，目前进入了Transformer时代。
@@ -34,3 +34,7 @@
       - 第1个阶段是利用语言模型进行预训练; 
       - 第2个阶段是在做特定任务时, 从预训练网络中提取对应单词的词向量作为新特征补充到下游任务中。
       - 基于RNN的LSTM模型训练时间长, 特征提取是ELMo模型优化和提升的关键。
+
+# 支线任务
+- 详细了解Word2Vec
+- 详细了解ELMo
