--- a/docs/任务3/笔记.md
+++ b/docs/任务3/笔记.md
@@ -1,6 +1,6 @@
 # 任务3 第二章的笔记
 
-### 2.1.2中点积公式的补充
+### 2.1.2中词向量点积公式的补充
 
 #### 📐 点积公式
 $$
@@ -71,3 +71,46 @@ cos_sim = dot_vw / (np.linalg.norm(v) * np.linalg.norm(w))  # ≈ 0.94
 ```
 
 > **关键结论**：点积是词向量相似性的基础度量，但实际应用中常结合归一化处理（如余弦相似度）以提升准确性。
+
+
+---
+
+### 词向量之间的相似度
+- **`q`**：**查询向量（Query）**，表示当前关注的位置（例如序列中的某个词）。
+- **`K`**：**键矩阵（Key）**，包含序列中所有位置的键向量（用于被查询）。
+- **`x = qK^T`**：  
+  计算 **`q`** 与 **`K`** 中所有键向量的点积（相似度得分）。结果 `x` 是一个向量，表示当前查询 `q` 与序列中每个位置的相似程度。
+
+
+`x = qK^T` 的结果会进一步处理：
+1. **缩放（Scale）**：`x / sqrt(d_k)`（`d_k` 是向量维度，避免点积过大导致梯度不稳定）。
+2. **Softmax 归一化**：将 `x` 转换为概率分布（和为 1），得到注意力权重。
+3. **加权求和**：用权重对 **值向量（Value）** 加权，生成最终注意力输出：  
+   `Output = Softmax(x) · V`
+
+
+**物理意义**
+- **`qK^T`** 本质是计算 **序列中所有位置对当前查询的贡献权重**。
+- 这是 Transformer 能捕捉长距离依赖的核心：无论词间距多远，直接计算相似度。
+
+
+### 图示说明
+```plaintext
+         Key Matrix (K)
+        +----+----+----+
+        | k1 | k2 | ... | kn |   (每列是一个键向量)
+        +----+----+----+
+             |
+             | 点积运算 (qK^T)
+             ↓
+Query (q) → [x1, x2, ..., xn]   (相似度得分向量)
+```
+
+### 为何重要？
+- **并行计算**：所有位置的 `qK^T` 可同时计算（高效）。
+- **动态权重**：根据输入动态分配注意力（优于 RNN/CNN 的固定模式）。
+- **核心创新**：使 Transformer 在 NLP 任务中取得突破性性能。
+
+如需深入，可参考文档中的 **Scaled Dot-Product Attention** 部分（通常含完整公式和代码实现）。
+
+
