--- a/docs/任务3/笔记.md
+++ b/docs/任务3/笔记.md
@@ -114,3 +114,407 @@ Query (q) → [x1, x2, ..., xn]   (相似度得分向量)
 如需深入，可参考文档中的 **Scaled Dot-Product Attention** 部分（通常含完整公式和代码实现）。
 
 
+## 2.1.3 注意力计算函数的解释
+
+让我们详细解释这行关键代码的作用，这是Transformer注意力机制的核心计算：
+
+```python
+scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(d_k)
+```
+
+### 1. **整体目标**
+计算查询向量(query)和键向量(key)之间的**相似度分数**，这个分数决定了在生成输出时，模型应该"关注"输入序列中的哪些部分。
+
+### 2. **张量形状说明**
+假设：
+- `query` 形状: `(batch_size, seq_len_q, d_k)`
+- `key` 形状: `(batch_size, seq_len_k, d_k)`
+
+其中：
+- `batch_size`: 批处理大小（同时处理的样本数）
+- `seq_len_q`: 查询序列长度
+- `seq_len_k`: 键序列长度（通常与值序列长度相同）
+- `d_k`: 特征维度（如512）
+
+### 3. **分步解析**
+
+#### (1) `key.transpose(-2, -1)`
+- **作用**: 转置键矩阵的最后两个维度
+- **原始形状**: `(batch_size, seq_len_k, d_k)`
+- **转置后形状**: `(batch_size, d_k, seq_len_k)`
+- **物理意义**: 准备矩阵乘法所需的维度对齐
+
+#### (2) `torch.matmul(query, key.transpose(-2, -1))`
+- **矩阵乘法**:
+  - `query`: `(batch_size, seq_len_q, d_k)`
+  - `key转置`: `(batch_size, d_k, seq_len_k)`
+- **结果形状**: `(batch_size, seq_len_q, seq_len_k)`
+- **计算内容**:
+  ```python
+  scores[i, j, k] = sum_{n=0}^{d_k-1} (query[i, j, n] * key[i, n, k])
+  ```
+  这实际上是**批量点积计算**：
+  - 对于批次中的每个样本
+  - 对于查询序列中的每个位置j
+  - 计算该位置查询向量与键序列中所有位置k的键向量的点积
+
+#### (3) `/ math.sqrt(d_k)`
+- **作用**: 缩放点积结果
+- **原因**:
+  1. 当特征维度`d_k`较大时，点积结果会非常大
+  2. 过大的值会使softmax进入饱和区（梯度接近0）
+  3. 缩放后保持方差稳定（数学证明：Var(q·k) = d_k）
+- **缩放因子**: √d_k（如d_k=512时，除以22.6）
+
+### 4. **物理意义**
+结果张量`scores`的每个元素表示：
+- 对于批次中的每个样本
+- 查询序列位置j与键序列位置k之间的相似度
+- 值越大表示相关性越强
+
+例如在机器翻译中：
+- 当生成英文单词"bank"时
+- 与输入法文序列中"banque"（银行）的点积分数会很高
+- 与"rivière"（河流）的点积分数会较低
+
+### 5. **可视化示例
+假设：
+- batch_size = 1
+- seq_len_q = 2（两个查询词）
+- seq_len_k = 3（三个键词）
+- d_k = 4
+
+```
+查询矩阵 (query)       键矩阵转置 (key^T)
+[ q11 q12 q13 q14 ]    [ k11 k21 k31 ]
+[ q21 q22 q23 q24 ]    [ k12 k22 k32 ]
+                       [ k13 k23 k33 ]
+                       [ k14 k24 k34 ]
+
+结果分数矩阵 (scores)
+[ q1•k1  q1•k2  q1•k3 ]
+[ q2•k1  q2•k2  q2•k3 ]
+
+其中 q1•k1 = q11*k11 + q12*k12 + q13*k13 + q14*k14
+```
+
+### 6. **后续处理**
+这个分数矩阵会继续用于：
+```python
+p_attn = scores.softmax(dim=-1)  # 转换为概率分布
+output = torch.matmul(p_attn, value)  # 加权求和
+```
+
+### 为什么这样设计？
+1. **高效计算**：一次矩阵乘法完成所有位置对的相似度计算
+2. **内容感知**：动态生成注意力权重（不同于RNN/CNN的固定模式）
+3. **可并行化**：充分利用GPU并行计算能力
+4. **理论保障**：缩放操作确保梯度稳定（原始Transformer论文的核心创新点之一）
+
+这个计算是Transformer能够同时处理长距离依赖和保持训练稳定性的关键，也是它优于传统RNN/LSTM架构的重要原因。
+
+多头注意力机制（Multi-Head Attention）中的"头"（Head）是一个核心概念，它指的是**多个独立的注意力计算单元**，每个单元专注于学习输入的不同方面的特征表示。以下是详细解释：
+
+### 1. "头"的本质含义
+- **多个独立的注意力机制**：每个"头"都是一套完整的注意力计算单元
+- **并行处理**：所有头同时计算，互不干扰
+- **特征多样性**：每个头学习输入的不同特征或关系
+
+### 2. 为什么需要多个"头"？
+| 单头注意力                 | 多头注意力                  |
+|---------------------------|----------------------------|
+| 只能学习一种注意力模式     | 可以学习多种注意力模式      |
+| 表达能力有限               | 表达能力更强                |
+| 可能遗漏重要信息           | 捕获更丰富的特征            |
+| 类比：单角度观察           | 类比：多角度观察            |
+
+### 3. 多头注意力的计算过程
+```mermaid
+graph LR
+A[输入X] --> B[线性变换]
+B --> C[拆分到h个头]
+C --> D1[头1计算]
+C --> D2[头2计算]
+C --> D3[头3计算]
+C --> Dh[头h计算]
+D1 --> E[拼接]
+D2 --> E
+D3 --> E
+Dh --> E
+E --> F[线性变换]
+F --> G[输出]
+```
+
+#### 具体步骤：
+1. **线性投影**：将输入拆分为h组查询(Q)、键(K)、值(V)
+   ```python
+   Q = linear_q(X).view(batch, seq, h, d_k)  # h个头，每个头维度d_k
+   K = linear_k(X).view(batch, seq, h, d_k)
+   V = linear_v(X).view(batch, seq, h, d_v)
+   ```
+
+2. **并行计算**：每个头独立计算注意力
+   ```python
+   # 第i个头的计算
+   attn_i = softmax(Q_i @ K_i.T / sqrt(d_k)) @ V_i
+   ```
+
+3. **结果拼接**：合并所有头的输出
+   ```python
+   output = torch.cat([attn_1, attn_2, ..., attn_h], dim=-1)
+   ```
+
+4. **最终投影**：线性变换得到输出
+   ```python
+   final_output = linear_o(output)
+   ```
+
+### 4. "头"的物理意义 - 实际案例
+在语言处理中，不同头可能关注：
+1. **语法头**：关注词性关系（名词-动词）
+   ```
+   输入："The cat [chases] the mouse"
+   关注：chases → cat, chases → mouse
+   ```
+
+2. **语义头**：关注同义/反义关系
+   ```
+   输入："big" and "large" are similar
+   关注：big → large
+   ```
+
+3. **指代头**：关注代词指代
+   ```
+   输入："John saw Mary. [He] waved."
+   关注：He → John
+   ```
+
+4. **长距离依赖头**：关注远距离关系
+   ```
+   输入："The cat [that] I saw yesterday was black"
+   关注：that → cat
+   ```
+
+### 5. 技术优势
+1. **增强表示能力**：每个头d_k维，总维度h×d_k ≈ 原始维度
+   - 原始维度d_model = 512
+   - 头数h=8 → 每个头d_k=64
+   - 总维度：8×64=512（保持相同计算量）
+
+2. **并行加速**：GPU可同时计算所有头
+
+3. **正则化效果**：防止过拟合（类似集成学习）
+
+4. **可解释性**：可视化不同头的关注模式
+
+### 6. 在Transformer中的应用
+- **原始论文设置**：
+  - 基础模型：h=8头
+  - 大型模型：h=16头
+- **位置**：
+  - 编码器：自注意力多头
+  - 解码器：自注意力多头 + 编码器-解码器多头
+
+### 7. 代码实现示例
+```python
+class MultiHeadAttention(nn.Module):
+    def __init__(self, d_model, h):
+        super().__init__()
+        self.d_k = d_model // h  # 每个头的维度
+        self.h = h               # 头数
+        
+        # 线性投影层
+        self.W_q = nn.Linear(d_model, d_model)
+        self.W_k = nn.Linear(d_model, d_model)
+        self.W_v = nn.Linear(d_model, d_model)
+        self.W_o = nn.Linear(d_model, d_model)
+        
+    def forward(self, Q, K, V):
+        batch_size = Q.size(0)
+        
+        # 投影并分头 [batch, seq, d_model] -> [batch, seq, h, d_k]
+        Q = self.W_q(Q).view(batch_size, -1, self.h, self.d_k).transpose(1, 2)
+        K = self.W_k(K).view(batch_size, -1, self.h, self.d_k).transpose(1, 2)
+        V = self.W_v(V).view(batch_size, -1, self.h, self.d_k).transpose(1, 2)
+        
+        # 每个头独立计算注意力
+        scores = torch.matmul(Q, K.transpose(-2, -1)) / math.sqrt(self.d_k)
+        attn = scores.softmax(dim=-1)
+        context = torch.matmul(attn, V)  # [batch, h, seq, d_k]
+        
+        # 拼接所有头
+        context = context.transpose(1, 2).contiguous().view(
+            batch_size, -1, self.h * self.d_k)  # [batch, seq, d_model]
+        
+        return self.W_o(context)
+```
+
+### 8. 为什么比单头更有效？
+1. **子空间学习**：每个头在不同子空间学习特征
+2. **注意力专业化**：不同头关注不同类型的关系
+3. **模型容错**：即使某个头学习失败，其他头可补偿
+4. **信息冗余**：重要特征被多个头捕获，增强鲁棒性
+
+### 总结
+多头注意力中的"头"：
+1. **本质**：独立的注意力计算单元
+2. **目的**：让模型从不同角度/子空间学习特征
+3. **优势**：增强表达能力、提升性能、改善可解释性
+4. **实现**：通过线性投影分割输入，并行计算后拼接
+5. **效果**：使Transformer能同时捕获语法、语义、指代等多种语言关系
+
+这种设计是Transformer在各种任务中表现出色的关键原因之一，它模仿了人类多角度理解信息的认知方式。
+
+## 2.1.6 多头注意力机制（Multi-Head Attention）中的"头"（Head）
+
+"头"是一个核心概念，它指的是**多个独立的注意力计算单元**，每个单元专注于学习输入的不同方面的特征表示。以下是详细解释：
+
+### 1. "头"的本质含义
+- **多个独立的注意力机制**：每个"头"都是一套完整的注意力计算单元
+- **并行处理**：所有头同时计算，互不干扰
+- **特征多样性**：每个头学习输入的不同特征或关系
+
+### 2. 为什么需要多个"头"？
+| 单头注意力                 | 多头注意力                  |
+|---------------------------|----------------------------|
+| 只能学习一种注意力模式     | 可以学习多种注意力模式      |
+| 表达能力有限               | 表达能力更强                |
+| 可能遗漏重要信息           | 捕获更丰富的特征            |
+| 类比：单角度观察           | 类比：多角度观察            |
+
+### 3. 多头注意力的计算过程
+```mermaid
+graph LR
+A[输入X] --> B[线性变换]
+B --> C[拆分到h个头]
+C --> D1[头1计算]
+C --> D2[头2计算]
+C --> D3[头3计算]
+C --> Dh[头h计算]
+D1 --> E[拼接]
+D2 --> E
+D3 --> E
+Dh --> E
+E --> F[线性变换]
+F --> G[输出]
+```
+
+#### 具体步骤：
+1. **线性投影**：将输入拆分为h组查询(Q)、键(K)、值(V)
+   ```python
+   Q = linear_q(X).view(batch, seq, h, d_k)  # h个头，每个头维度d_k
+   K = linear_k(X).view(batch, seq, h, d_k)
+   V = linear_v(X).view(batch, seq, h, d_v)
+   ```
+
+2. **并行计算**：每个头独立计算注意力
+   ```python
+   # 第i个头的计算
+   attn_i = softmax(Q_i @ K_i.T / sqrt(d_k)) @ V_i
+   ```
+
+3. **结果拼接**：合并所有头的输出
+   ```python
+   output = torch.cat([attn_1, attn_2, ..., attn_h], dim=-1)
+   ```
+
+4. **最终投影**：线性变换得到输出
+   ```python
+   final_output = linear_o(output)
+   ```
+
+### 4. "头"的物理意义 - 实际案例
+在语言处理中，不同头可能关注：
+1. **语法头**：关注词性关系（名词-动词）
+   ```
+   输入："The cat [chases] the mouse"
+   关注：chases → cat, chases → mouse
+   ```
+
+2. **语义头**：关注同义/反义关系
+   ```
+   输入："big" and "large" are similar
+   关注：big → large
+   ```
+
+3. **指代头**：关注代词指代
+   ```
+   输入："John saw Mary. [He] waved."
+   关注：He → John
+   ```
+
+4. **长距离依赖头**：关注远距离关系
+   ```
+   输入："The cat [that] I saw yesterday was black"
+   关注：that → cat
+   ```
+
+### 5. 技术优势
+1. **增强表示能力**：每个头d_k维，总维度h×d_k ≈ 原始维度
+   - 原始维度d_model = 512
+   - 头数h=8 → 每个头d_k=64
+   - 总维度：8×64=512（保持相同计算量）
+
+2. **并行加速**：GPU可同时计算所有头
+
+3. **正则化效果**：防止过拟合（类似集成学习）
+
+4. **可解释性**：可视化不同头的关注模式
+
+### 6. 在Transformer中的应用
+- **原始论文设置**：
+  - 基础模型：h=8头
+  - 大型模型：h=16头
+- **位置**：
+  - 编码器：自注意力多头
+  - 解码器：自注意力多头 + 编码器-解码器多头
+
+### 7. 代码实现示例
+```python
+class MultiHeadAttention(nn.Module):
+    def __init__(self, d_model, h):
+        super().__init__()
+        self.d_k = d_model // h  # 每个头的维度
+        self.h = h               # 头数
+        
+        # 线性投影层
+        self.W_q = nn.Linear(d_model, d_model)
+        self.W_k = nn.Linear(d_model, d_model)
+        self.W_v = nn.Linear(d_model, d_model)
+        self.W_o = nn.Linear(d_model, d_model)
+        
+    def forward(self, Q, K, V):
+        batch_size = Q.size(0)
+        
+        # 投影并分头 [batch, seq, d_model] -> [batch, seq, h, d_k]
+        Q = self.W_q(Q).view(batch_size, -1, self.h, self.d_k).transpose(1, 2)
+        K = self.W_k(K).view(batch_size, -1, self.h, self.d_k).transpose(1, 2)
+        V = self.W_v(V).view(batch_size, -1, self.h, self.d_k).transpose(1, 2)
+        
+        # 每个头独立计算注意力
+        scores = torch.matmul(Q, K.transpose(-2, -1)) / math.sqrt(self.d_k)
+        attn = scores.softmax(dim=-1)
+        context = torch.matmul(attn, V)  # [batch, h, seq, d_k]
+        
+        # 拼接所有头
+        context = context.transpose(1, 2).contiguous().view(
+            batch_size, -1, self.h * self.d_k)  # [batch, seq, d_model]
+        
+        return self.W_o(context)
+```
+
+### 8. 为什么比单头更有效？
+1. **子空间学习**：每个头在不同子空间学习特征
+2. **注意力专业化**：不同头关注不同类型的关系
+3. **模型容错**：即使某个头学习失败，其他头可补偿
+4. **信息冗余**：重要特征被多个头捕获，增强鲁棒性
+
+### 总结
+多头注意力中的"头"：
+1. **本质**：独立的注意力计算单元
+2. **目的**：让模型从不同角度/子空间学习特征
+3. **优势**：增强表达能力、提升性能、改善可解释性
+4. **实现**：通过线性投影分割输入，并行计算后拼接
+5. **效果**：使Transformer能同时捕获语法、语义、指代等多种语言关系
+
+这种设计是Transformer在各种任务中表现出色的关键原因之一，它模仿了人类多角度理解信息的认知方式。
