--- a/docs/任务3/笔记.md
+++ b/docs/任务3/笔记.md
@@ -1,8 +1,17 @@
-# 任务3 第二章的笔记
+# 任务3 第二章 注意力机制
 
-### 2.1.2中词向量点积公式的补充
+## 2.1.1 注意力机制之前的三种神经网络
+- 前馈神经网络 Feedforward Neural Network FNN - 每层神经元都和上下两层的**每一个**神经元进行连接.
+- 卷积神经网络 Convolutional Neural Network，CNN，即先用全部特征的部分来训练的卷积层来进行特征提取，再用这些提取的特征来训练的全连接层来进行分类。
+- 自回归神经网络 Recurrent Neural Network RNN - 能够使用历史信息作为输入、包含环和自重复的网络.
 
-#### 📐 点积公式
+其中RNN是处理NLP任务的首选，但也由缺陷：1. 序列依序计算的模式限制了计算机并行计算的能力, 2. RNN 难以捕捉长序列的相关关系
+
+## 2.1.2 注意力机制
+注意力机制最先源于计算机视觉领域，其核心思想为当我们关注一张图片，我们往往无需看清楚全部内容而仅将注意力集中在重点部分即可。而在自然语言处理领域，我们往往也可以通过将重点注意力集中在一个或几个 token，从而取得更高效高质的计算效果。注意力机制有三个核心变量：Query（查询值）、Key（键值）和 Value（真值）。
+
+### 词向量点积公式的补充
+
 $$
 v \cdot w = \sum_{i} v_i w_i
 $$
@@ -23,7 +32,7 @@ $$
 
 ---
 
-#### 🔍 计算示例（二维简化模型）
+🔍 计算示例（二维简化模型）
 假设两个词向量：
 - **"快乐"** 向量：`v = [2, 3]`
 - **"喜悦"** 向量：`w = [1, 4]`
@@ -40,7 +49,7 @@ $$
 
 ---
 
-#### ⚖️ 对比案例：反义词计算
+⚖️ 对比案例：反义词计算
 假设 **"悲伤"** 向量：`u = [-1, -2]`
 - **"快乐" vs "悲伤"** 点积：  
   `(2×-1) + (3×-2) = -2 + (-6) = **-8**`  
@@ -48,7 +57,7 @@ $$
 
 ---
 
-#### 💡 词向量应用要点
+💡 词向量应用要点
 | 度量方式 | 公式 | 特点 | 推荐场景 |
 |----------|------|------|----------|
 | **原始点积** | `v·w` | 计算快，但受向量长度影响 | 快速初步筛选 |
@@ -89,12 +98,12 @@ cos_sim = dot_vw / (np.linalg.norm(v) * np.linalg.norm(w))  # ≈ 0.94
    `Output = Softmax(x) · V`
 
 
-**物理意义**
+#### **物理意义**
 - **`qK^T`** 本质是计算 **序列中所有位置对当前查询的贡献权重**。
 - 这是 Transformer 能捕捉长距离依赖的核心：无论词间距多远，直接计算相似度。
 
 
-### 图示说明
+图示说明
 ```plaintext
          Key Matrix (K)
         +----+----+----+
@@ -106,7 +115,7 @@ cos_sim = dot_vw / (np.linalg.norm(v) * np.linalg.norm(w))  # ≈ 0.94
 Query (q) → [x1, x2, ..., xn]   (相似度得分向量)
 ```
 
-### 为何重要？
+为何重要？
 - **并行计算**：所有位置的 `qK^T` 可同时计算（高效）。
 - **动态权重**：根据输入动态分配注意力（优于 RNN/CNN 的固定模式）。
 - **核心创新**：使 Transformer 在 NLP 任务中取得突破性性能。
@@ -213,7 +222,10 @@ output = torch.matmul(p_attn, value)  # 加权求和
 
 这个计算是Transformer能够同时处理长距离依赖和保持训练稳定性的关键，也是它优于传统RNN/LSTM架构的重要原因。
 
-多头注意力机制（Multi-Head Attention）中的"头"（Head）是一个核心概念，它指的是**多个独立的注意力计算单元**，每个单元专注于学习输入的不同方面的特征表示。以下是详细解释：
+
+## 2.1.6 多头注意力机制（Multi-Head Attention）
+
+Transformer中的"头"（Head）是一个核心概念，它指的是**多个独立的注意力计算单元**，每个单元专注于学习输入的不同方面的特征表示。以下是详细解释：
 
 ### 1. "头"的本质含义
 - **多个独立的注意力机制**：每个"头"都是一套完整的注意力计算单元
