--- a/docs/任务3/笔记.md
+++ b/docs/任务3/笔记.md
@@ -2,13 +2,17 @@
 
 ## 2.1.1 注意力机制之前的三种神经网络
 - 前馈神经网络 Feedforward Neural Network FNN - 每层神经元都和上下两层的**每一个**神经元进行连接.
-- 卷积神经网络 Convolutional Neural Network，CNN，即先用全部特征的部分来训练的卷积层来进行特征提取，再用这些提取的特征来训练的全连接层来进行分类。
+- 卷积神经网络 Convolutional Neural Network，CNN - 即先用全部特征的部分来训练的卷积层来进行特征提取，再用这些提取的特征来训练的全连接层来进行分类。
 - 自回归神经网络 Recurrent Neural Network RNN - 能够使用历史信息作为输入、包含环和自重复的网络.
 
-其中RNN是处理NLP任务的首选，但也由缺陷：1. 序列依序计算的模式限制了计算机并行计算的能力, 2. RNN 难以捕捉长序列的相关关系
+其中RNN是处理NLP任务的首选，但也有缺陷：
+- 1. 序列依序计算的模式限制了计算机并行计算的能力
+- 2. RNN难以捕捉长序列的相关关系
 
 ## 2.1.2 注意力机制
-注意力机制最先源于计算机视觉领域，其核心思想为当我们关注一张图片，我们往往无需看清楚全部内容而仅将注意力集中在重点部分即可。而在自然语言处理领域，我们往往也可以通过将重点注意力集中在一个或几个 token，从而取得更高效高质的计算效果。注意力机制有三个核心变量：Query（查询值）、Key（键值）和 Value（真值）。
+注意力机制最先源于计算机视觉领域，其核心思想为当我们关注一张图片，我们往往无需看清楚全部内容而仅将注意力集中在重点部分即可。而在自然语言处理领域，我们往往也可以通过将重点注意力集中在一个或几个 token，从而取得更高效高质的计算效果。
+
+注意力机制有三个核心变量：Query（查询值）、Key（键值）和 Value（真值）。
 
 ### 词向量点积公式的补充
 
