--- a/docs/任务3/笔记.md
+++ b/docs/任务3/笔记.md
@@ -12,9 +12,11 @@
 ## 2.1.2 注意力机制
 注意力机制最先源于计算机视觉领域，其核心思想为当我们关注一张图片，我们往往无需看清楚全部内容而仅将注意力集中在重点部分即可。而在自然语言处理领域，我们往往也可以通过将重点注意力集中在一个或几个 token，从而取得更高效高质的计算效果。
 
+**注意力机制的本质**是对两段序列的元素依次进行相似度计算，寻找出一个序列的每个元素对另一个序列的每个元素的相关度，然后基于相关度进行加权，即分配注意力。
+
 注意力机制有三个核心变量：Query（查询值）、Key（键值）和 Value（真值）。
 
-### 词向量点积公式的补充
+### 用点积来计算词向量的相似度
 
 $$
 v \cdot w = \sum_{i} v_i w_i
@@ -127,7 +129,7 @@ Query (q) → [x1, x2, ..., xn]   (相似度得分向量)
 如需深入，可参考文档中的 **Scaled Dot-Product Attention** 部分（通常含完整公式和代码实现）。
 
 
-## 2.1.3 注意力计算函数的解释
+## 2.1.3 注意力机制的实现和计算函数的解释
 
 让我们详细解释这行关键代码的作用，这是Transformer注意力机制的核心计算：
 
@@ -226,6 +228,28 @@ output = torch.matmul(p_attn, value)  # 加权求和
 
 这个计算是Transformer能够同时处理长距离依赖和保持训练稳定性的关键，也是它优于传统RNN/LSTM架构的重要原因。
 
+
+## 2.1.4 自注意力
+实际应用中，只需要计算 Query 和 Key 之间的注意力结果，很少存在额外的真值 Value。也就是说，只需要拟合两个文本序列。
+在 Transformer 的 Encoder 结构中，使用的是 注意力机制的变种 —— 自注意力（self-attention，自注意力）机制。所谓自注意力，即是计算本身序列中每个元素对其他元素的注意力分布，即在计算过程中，Q、K、V 都由同一个输入通过不同的参数矩阵计算得到。
+
+在 Encoder 中，Q、K、V 分别是输入对参数矩阵 $W_q、W_k、W_v$ 做积得到，从而拟合输入语句中每一个 token 对其他所有 token 的关系。
+
+通过自注意力机制，我们可以找到一段文本中每一个 token 与其他所有 token 的相关关系大小，从而建模文本之间的依赖关系。​在代码中的实现，self-attention 机制其实是通过给 Q、K、V 的输入传入同一个参数实现的：
+
+```python
+# attention 为上文定义的注意力计算函数
+attention(x, x, x)
+```
+
+## 2.1.5 掩码自注意力
+```python
+# 创建一个上三角矩阵，用于遮蔽未来信息。
+# 先通过 full 函数创建一个 1 * seq_len * seq_len 的矩阵
+mask = torch.full((1, args.max_seq_len, args.max_seq_len), float("-inf"))
+# triu 函数的功能是创建一个上三角矩阵
+mask = torch.triu(mask, diagonal=1)
+```
 
 ## 2.1.6 多头注意力机制（Multi-Head Attention）
 
